# sggit

./: .vimspector.json  Cargo.toml  LICENSE  README.md  tags
src/: command.rs  commands.rs  commit.rs  common_helpers.rs  config.rs  init.rs  lib.rs  main.rs  parse_json.rs  parse_platform_setting.rs  parse_repo_config.rs  platform_setting.json
src/commands/: add.rs  command.rs  commit.rs  init.rs  mod.rs  proxy.rs  status.rs  sync.rs  track.rs  untrack.rs
src/examples/: example.json  platform_setting.json
src/parsers/: mod.rs  parse_platform_setting.rs  parse_repo_config.rs
tests/: integration_tests.rs
tests/common/: mod.rs
