[package]
name = "configsync"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "CLI and daemon to manage config file backup and restoration"
license = "MIT"

[dependencies]
argh = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"   # if you're running unit tests
tokio = { version = "1", features = ["full"] }
json5 = "0.3"
git2 = "0.13"

