[package]
name = "sggit"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1"
git2 = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4.31", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
